# JetsamDreamsVideo

./: 1. The Maiden Flight.ipynb  2. Pterosauring.ipynb  3. In Plain Flight.ipynb  4. Flutter On.ipynb  5. Wintering Grounds.ipynb  6. Alpenglow.ipynb  7. Jettison The Rest.ipynb  8. Sub Rosa Sunburst.ipynb  9. Generate Full Album Video.ipynb  README.md  pyproject.toml
