[tool.poetry]
name = "jetsamdreamsvideo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
aeraudioviz = {git = "git@github.com:Aerodactylus/AerAudioViz.git"}
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
